--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1326,32 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fd37b279da0>"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bins = [0, 584.9, 629.9, 644.9, 10000]\n",
-    "labels = [\"<$585\", \"$585-630\", \"$630-645\", \"$645-680\"]\n",
-    "school_data_complete[\"Spending Ranges (Per Student)\"] = pd.cut(school_data_complete[\"budget\"]/school_data_complete[\"size\"], bins=bins, labels=labels)\n",
-    "\n",
-    "scores_by_school = school_data_complete.groupby(\"Spending Ranges (Per Student)\")\n",
-    "scores_by_school"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1450,19 +1425,24 @@
        "$645-680                               53.528791  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "bins = [0, 584.99, 629.99, 644.99, 680]\n",
+    "labels = [\"<$585\", \"$585-630\", \"$630-645\", \"$645-680\"]\n",
+    "school_data_complete[\"Spending Ranges (Per Student)\"] = pd.cut(school_data_complete[\"budget\"]/school_data_complete[\"size\"], bins=bins, labels=labels)\n",
+    "scores_by_school = school_data_complete.groupby(\"Spending Ranges (Per Student)\")\n",
+    "scores_by_school\n",
+    "\n",
     "scores_total_students = scores_by_school[\"Student ID\"].count()\n",
     "scores_math_average = scores_by_school[\"math_score\"].mean()\n",
     "scores_reading_average = scores_by_school[\"reading_score\"].mean()\n",
     "scores_passing_math = school_data_complete[school_data_complete[\"math_score\"] >= 70].groupby(\"Spending Ranges (Per Student)\")[\"Student ID\"].count()/scores_total_students*100\n",
     "scores_passing_reading = school_data_complete[school_data_complete[\"reading_score\"] >= 70].groupby(\"Spending Ranges (Per Student)\")[\"Student ID\"].count()/scores_total_students*100\n",
     "scores_passing_overall = school_data_complete[(school_data_complete[\"math_score\"] >= 70) & (school_data_complete[\"reading_score\"] >= 70)].groupby(\"Spending Ranges (Per Student)\")[\"Student ID\"].count()/scores_total_students*100\n",
-    "\n",
     "\n",
     "scores_by_school = pd.DataFrame({'Average Math Score': scores_math_average,\n",
     "                               'Average Reading Score': scores_reading_average,\n",
@@ -1472,7 +1452,7 @@
     "                              })\n",
     "\n",
     "scores_by_school\n",
-    "#working on finishing. "
+    "#working on finishing with Geronimo "
    ]
   },
   {
@@ -1491,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 169,
    "metadata": {
     "scrolled": true
    },
@@ -1535,27 +1515,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Small (&lt;1000)</th>\n",
-       "      <td>83.821598</td>\n",
-       "      <td>83.929843</td>\n",
-       "      <td>93.550225</td>\n",
-       "      <td>96.099437</td>\n",
-       "      <td>89.883853</td>\n",
+       "      <td>83.828654</td>\n",
+       "      <td>83.974082</td>\n",
+       "      <td>93.952484</td>\n",
+       "      <td>96.040317</td>\n",
+       "      <td>90.136789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Medium (1000-2000)</th>\n",
-       "      <td>83.374684</td>\n",
-       "      <td>83.864438</td>\n",
-       "      <td>93.599695</td>\n",
-       "      <td>96.790680</td>\n",
-       "      <td>90.621535</td>\n",
+       "      <td>83.372682</td>\n",
+       "      <td>83.867989</td>\n",
+       "      <td>93.616522</td>\n",
+       "      <td>96.773058</td>\n",
+       "      <td>90.624267</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Large (2000-5000)</th>\n",
-       "      <td>77.746417</td>\n",
-       "      <td>81.344493</td>\n",
-       "      <td>69.963361</td>\n",
-       "      <td>82.766634</td>\n",
-       "      <td>58.286003</td>\n",
+       "      <td>77.477597</td>\n",
+       "      <td>81.198674</td>\n",
+       "      <td>68.652380</td>\n",
+       "      <td>82.125158</td>\n",
+       "      <td>56.574046</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1564,23 +1544,44 @@
       "text/plain": [
        "                    Average Math Score  Average Reading Score  % Passing Math  \\\n",
        "School Size                                                                     \n",
-       "Small (<1000)                83.821598              83.929843       93.550225   \n",
-       "Medium (1000-2000)           83.374684              83.864438       93.599695   \n",
-       "Large (2000-5000)            77.746417              81.344493       69.963361   \n",
+       "Small (<1000)                83.828654              83.974082       93.952484   \n",
+       "Medium (1000-2000)           83.372682              83.867989       93.616522   \n",
+       "Large (2000-5000)            77.477597              81.198674       68.652380   \n",
        "\n",
        "                    % Passing Reading  % Overall Passing  \n",
        "School Size                                               \n",
-       "Small (<1000)               96.099437          89.883853  \n",
-       "Medium (1000-2000)          96.790680          90.621535  \n",
-       "Large (2000-5000)           82.766634          58.286003  "
+       "Small (<1000)               96.040317          90.136789  \n",
+       "Medium (1000-2000)          96.773058          90.624267  \n",
+       "Large (2000-5000)           82.125158          56.574046  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "size_bins = [0, 999.99, 1999.99, 5000]\n",
+    "size_labels = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]\n",
+    "school_data_complete[\"School Size\"] = pd.cut(school_data_complete[\"size\"], bins=size_bins, labels=size_labels)\n",
+    "\n",
+    "school_size = school_data_complete.groupby(\"School Size\")\n",
+    "size_students = school_size[\"Student ID\"].count()\n",
+    "size_math_average = school_size[\"math_score\"].mean()\n",
+    "size_reading_average = school_size[\"reading_score\"].mean()\n",
+    "size_passing_math = school_data_complete[school_data_complete[\"math_score\"] >= 70].groupby(\"School Size\")[\"Student ID\"].count()/size_students*100\n",
+    "size_passing_reading = school_data_complete[school_data_complete[\"reading_score\"] >= 70].groupby(\"School Size\")[\"Student ID\"].count()/size_students*100\n",
+    "size_passing_overall = school_data_complete[(school_data_complete[\"math_score\"] >= 70) & (school_data_complete[\"reading_score\"] >= 70)].groupby(\"School Size\")[\"Student ID\"].count()/size_students*100\n",
+    "\n",
+    "school_size = pd.DataFrame({'Average Math Score': size_math_average,\n",
+    "                               'Average Reading Score': size_reading_average,\n",
+    "                               '% Passing Math': size_passing_math,\n",
+    "                               '% Passing Reading': size_passing_reading,\n",
+    "                               '% Overall Passing': size_passing_overall\n",
+    "                              })\n",
+    "\n",
+    "school_size"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1598,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1640,19 +1641,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Charter</th>\n",
-       "      <td>83.473852</td>\n",
-       "      <td>83.896421</td>\n",
-       "      <td>93.620830</td>\n",
-       "      <td>96.586489</td>\n",
-       "      <td>90.432244</td>\n",
+       "      <td>83.406183</td>\n",
+       "      <td>83.902821</td>\n",
+       "      <td>93.701821</td>\n",
+       "      <td>96.645891</td>\n",
+       "      <td>90.560932</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>District</th>\n",
-       "      <td>76.956733</td>\n",
-       "      <td>80.966636</td>\n",
-       "      <td>66.548453</td>\n",
-       "      <td>80.799062</td>\n",
-       "      <td>53.672208</td>\n",
+       "      <td>76.987026</td>\n",
+       "      <td>80.962485</td>\n",
+       "      <td>66.518387</td>\n",
+       "      <td>80.905249</td>\n",
+       "      <td>53.695878</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1661,21 +1662,42 @@
       "text/plain": [
        "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
        "School Type                                                              \n",
-       "Charter               83.473852              83.896421       93.620830   \n",
-       "District              76.956733              80.966636       66.548453   \n",
+       "Charter               83.406183              83.902821       93.701821   \n",
+       "District              76.987026              80.962485       66.518387   \n",
        "\n",
        "             % Passing Reading  % Overall Passing  \n",
        "School Type                                        \n",
-       "Charter              96.586489          90.432244  \n",
-       "District             80.799062          53.672208  "
+       "Charter              96.645891          90.560932  \n",
+       "District             80.905249          53.695878  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "school_data_complete[\"School Type\"] = school_data_complete[\"type\"]\n",
+    "\n",
+    "school_type = school_data_complete.groupby(\"School Type\")\n",
+    "type_students = school_type[\"Student ID\"].count()\n",
+    "type_math_average = school_type[\"math_score\"].mean()\n",
+    "type_reading_average = school_type[\"reading_score\"].mean()\n",
+    "#type_passing_math = school_data_complete[school_data_complete[\"math_score\"] >= 70].groupby(\"School Type\")[\"Student ID\"].count()/type_students*100\n",
+    "#type_passing_reading = school_data_complete[school_data_complete[\"reading_score\"] >= 70].groupby(\"School Type\")[\"Student ID\"].count()/type_students*100\n",
+    "#type_passing_overall = school_data_complete[(school_data_complete[\"math_score\"] >= 70) & (school_data_complete[\"reading_score\"] >= 70)].groupby(\"School Type\")[\"Student ID\"].count()/type_students*100\n",
+    "type_passing_math = school_data_complete[school_data_complete[\"math_score\"] >= 70].groupby(\"School Type\")[\"type\"].count()/type_students*100\n",
+    "type_passing_reading = school_data_complete[school_data_complete[\"reading_score\"] >= 70].groupby(\"School Type\")[\"type\"].count()/type_students*100\n",
+    "type_passing_overall = school_data_complete[(school_data_complete[\"math_score\"] >= 70) & (school_data_complete[\"reading_score\"] >= 70)].groupby(\"School Type\")[\"type\"].count()/type_students*100\n",
+    "school_type = pd.DataFrame({'Average Math Score': type_math_average,\n",
+    "                               'Average Reading Score': type_reading_average,\n",
+    "                               '% Passing Math': type_passing_math,\n",
+    "                               '% Passing Reading': type_passing_reading,\n",
+    "                               '% Overall Passing': type_passing_overall\n",
+    "                              })\n",
+    "\n",
+    "school_type"
+   ]
   },
   {
    "cell_type": "code",
